--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">    
-    <title>NFT Site</title>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Insanely Expensive JPEGs</h1>
-            <h3>(Also known as NFTs)</h3>
-        </div>
-    </header>
-
-    <main>
-        <section>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/index.css">    
+        <title>NFT Site</title>
+    </head>
+    <body>
+        <header>
             <div class="container">
-                <h2>Meta-Pigeon Sneaker NFT $33,000</h2>
-                <img class="main-img" src="assets/images/sneakers-purple.png" alt="Purple and silver sneakers">
-                <p><strong>At $33k, this NFT sneaker is super good value!</strong></p>
-                <p>If you've got lots of money and you're a bit daft, NFTs are a 
-                great way to pay for something that doesn't have any intrinsic 
-                value or even exist. Tech fashionistas are jumping on the NFT 
-                bandwagon and spending eye-watering sums of money on crypto images. 
-                Our advice: spend the weekend <a href="">crafting an NFT</a> and by 
-                this time next week, you'll be a millionaire.</p>
-                <a href="#" class="btn btn-dark">Buy NFT</a>
-                <a href="#" class="btn btn-mid">More info</a>
+                <h1>
+                    Wildly Expensive JPEGs
+                    <span class="subheading">(Also known as NFTs)</span>
+                </h1>
             </div>
-        </section>
+        </header>
 
-        <section>
-            <div class="container">
-                <h2>For the true Crypto-connoisseur</h2>
-                <div class="feature-img-container">
-                    <img class="feature-image" src="assets/images/crypto-punk.jpg" alt="punk with blach hair and red and blue glasses">
-                    <img class="feature-image" src="assets/images/bag.svg" alt="Seven items from a game listed in white on a black background">
+        <main>
+            <section>
+                <div class="container">
+                    <h2>Meta-Pigeon Sneaker NFT $33,000</h2>
+                    <img class="main-img" src="assets/images/sneakers-purple.png" alt="Purple and silver sneakers">
+                    <h3>At $33k, this NFT sneaker is super good value!</h3>
+                    <p>If you've got lots of money and you're a bit daft, NFTs are a 
+                    great way to pay for something that doesn't have any intrinsic 
+                    value or even exist. Tech fashionistas are jumping on the NFT 
+                    bandwagon and spending eye-watering sums of money on crypto images. 
+                    Our advice: spend the weekend <a href="">crafting an NFT</a> and by 
+                    this time next week, you'll be a millionaire.</p>
+                    <a href="#" class="btn btn-dark">Buy NFT</a>
+                    <a href="#" class="btn btn-mid">More info</a>
                 </div>
-                <p>Is $33k for sneakers too basic for you? No problem! This CryptoPunk 
-                (left) is a steal at $6.6 million! Which makes Bag #748 (right) a 
-                total bargain at $1.4 million. And by the way, that's not a VS 
-                Code screenshot we included by mistake. The eight lines of white text 
-                on a black background is the actual NFT we're selling.</p>
-                <a href="#" class="btn btn-light">About Us</a>
-                <a href="#" class="btn btn-mid">Contact</a>
-                <p>Still not convinced? To be honest, nor are we. That's why we're selling 
-                them, not buying them.</p>  
-            </div>
-        </section>
-    </main>
+            </section>
 
-    <footer>
-        <p>&copy; 2022 FoolsGold.com</p>
-    </footer>
-</body>
+            <section class="section-two">
+                <div class="container">
+                    <h2>For the true Crypto-connoisseur</h2>
+                    <div class="feature-img-container">
+                        <img class="feature-image" src="assets/images/crypto-punk.jpg" alt="punk with blach hair and red and blue glasses">
+                        <img class="feature-image" src="assets/images/bag.svg" alt="Seven items from a game listed in white on a black background">
+                    </div>
+                    <p>Is $33k for sneakers too basic for you? No problem! This CryptoPunk 
+                    (left) is a steal at $6.6 million! Which makes Bag #748 (right) a 
+                    total bargain at $1.4 million. And by the way, that's not a VS 
+                    Code screenshot we included by mistake. The eight lines of white text 
+                    on a black background is the actual NFT we're selling.</p>
+                    <a href="#" class="btn btn-light">About Us</a>
+                    <a href="#" class="btn btn-mid">Contact</a>
+                    <p>Still not convinced? To be honest, nor are we. That's why we're selling 
+                    them, not buying them.</p>  
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2022 FoolsGold.com</p>
+        </footer>
+    </body>
 </html>
