--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="section-two">
                 <div class="container">
                     <h2>For the true Crypto-connoisseur</h2>
-                    <div class="feature-img-container">
+                    <div class="section-two-img-container">
                         <img class="feature-image" src="assets/images/crypto-punk.jpg" alt="punk with blach hair and red and blue glasses">
                         <img class="feature-image" src="assets/images/bag.svg" alt="Seven items from a game listed in white on a black background">
                     </div>
