--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
                 <div class="container">
                     <h2>For the true Crypto-connoisseur</h2>
                     <div class="section-two-img-container">
-                        <img class="feature-image" src="assets/images/crypto-punk.jpg" alt="punk with blach hair and red and blue glasses">
-                        <img class="feature-image" src="assets/images/bag.svg" alt="Seven items from a game listed in white on a black background">
+                        <div class="feature-item">
+                            <img class="feature-image" src="assets/images/crypto-punk.jpg" alt="punk with blach hair and red and blue glasses">
+                            <p>Is $33k for sneakers too basic? No problem! This CryptoPunk is a steal at $6.6 million, making Bag #748 (right) a total bargain.</p>
+                        </div>
+                        <div class="feature-item">
+                            <img class="feature-image" src="assets/images/bag.svg" alt="Seven items from a game listed in white on a black background">
+                            <p>That's not a screenshot. Those eight lines of white text on a black background is the actual NFT we're selling for $1.4 million.</p>
+                        </div>
                     </div>
                     <p>Is $33k for sneakers too basic for you? No problem! This CryptoPunk 
                     (left) is a steal at $6.6 million! Which makes Bag #748 (right) a 
